@@ -53,6 +53,7 @@
     <Compile Include="Commands\ICommand.cs" />
     <Compile Include="Commands\PrintCommand.cs" />
     <Compile Include="Commands\SetVariableCommand.cs" />
+    <Compile Include="Commands\WhileCommand.cs" />
     <Compile Include="Compiler\ParserException.cs" />
     <Compile Include="Compiler\EndOfInputException.cs" />
     <Compile Include="Compiler\Lexer.cs" />
